[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/bigboss.png" type="Texture" id=1]
[ext_resource path="res://src/actors/Light.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/actors/OrbitController.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/actors/BombEnemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/actors/BigBoss.gd" type="Script" id=5]
[ext_resource path="res://assets/material/BigBoss.tres" type="Material" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.5045
height = 18.4054

[sub_resource type="Animation" id=3]
resource_name = "Damage"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "WalkDown"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}

[node name="BigBoss" type="KinematicBody2D" groups=[
"bigboss",
"enemy",
]]
material = ExtResource( 6 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 5 )

[node name="Light2D" parent="." instance=ExtResource( 2 )]
texture_scale = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 6 )
texture = ExtResource( 1 )
hframes = 4

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.83427, 13.3322 )
scale = Vector2( 5.95401, 1 )
process_parent = true
physics_process_parent = true

[node name="OrbitController" parent="." instance=ExtResource( 3 )]
radius = Vector2( 50, 50 )
rotation_duration = 2.0

[node name="BombEnemy2" parent="OrbitController" instance=ExtResource( 4 )]
position = Vector2( 30.6246, -32.9165 )

[node name="BombEnemy" parent="OrbitController" instance=ExtResource( 4 )]
position = Vector2( -34.0769, 41.3154 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 3 )
anims/WalkDown = SubResource( 2 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
